fix models properties
